--- a/view/login/index.html
+++ b/view/login/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
         <main>
             <img src="../../assets/materiais/logo petit.png" alt="LOGO PETIT">
             <h1>LOGIN</h1>
-            <form action="/">
+            <form action="/view/pedido/index.html">
                 <div>
                     <input type="text" placeholder="Usuário" name="" id="Usuario">
                 </div>
