--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,7 @@
     --laranja: #FF9011;
     --laranja-escuro: #E67F0D;
     --laranja-vermelho: #FE4E00;
+    --sombra: 0px 0px 5px -1px black;
 }
 
 .section-login {
@@ -96,26 +97,89 @@
     cursor: pointer;
     right: 12%;
 }
-@media ( max-width:900px){
-    .section-login main{
+
+.container-all {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    position: fixed relative;
+}
+
+.menu{
+    background-color: white;
+    width: 15vw;
+    height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+    box-sizing: border-box;
+    box-shadow: var(--sombra);
+    z-index: 999;
+}
+.menu section{
+    width: 15vw;
+    height: 15vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.menu img{
+    width: 10vw;
+    height: 10vw;
+    border-radius: 50%;
+    box-shadow: var(--sombra);
+}
+.menu ul{
+    height: auto;
+    width: 15vw;
+    box-sizing: border-box;
+}
+.menu li{
+    padding: 20px;
+    list-style: none;
+}
+.menu li:hover{
+    padding: 20px;
+    list-style: none;
+    background-color: var(--laranja);
+    cursor: pointer;
+}
+.menu i{
+    margin-right: 10px;
+}
+.container-content{
+    max-width: 100vw;
+    min-width: 85vw;
+    box-sizing: border-box;
+}
+
+/* RESPONSE WIDTH 900px */
+@media (max-width:900px) {
+    .section-login main {
         width: 75vw;
         height: 75vh;
     }
-    .section-login main div{
+
+    .section-login main div {
         width: 60vw;
     }
+
     .section-login main img {
         width: 20vw;
     }
 }
-@media (max-width:500px){
-    .section-login main{
+
+/* RESPONSE WIDTH 500px */
+@media (max-width:500px) {
+    .section-login main {
         width: 95vw;
         height: 95vh;
     }
-    .section-login main div{
+
+    .section-login main div {
         width: 80vw;
     }
+
     .section-login main img {
         width: 40vw;
     }
