--- a/view/pedido/index.html
+++ b/view/pedido/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,26 @@
     <link rel="stylesheet" href="../../style/style.css">
     <link rel="shortcut icon" href="/assets/materiais/logo petit.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
 </head>
-<body>
 
+<body>
+    <div class="container-all">
+        <aside class="menu">
+            <section>
+                <img src="../../assets/materiais/petit perfil.png" alt="">
+            </section>
+            <ul>
+                <li> <i class="bi-house-fill"></i>Home</li>
+                <li><i class="bi-folder-fill"></i>Pedidos</li>
+                <li><i class="bi-people-fill"></i>Clientes</li>
+            </ul>
+        </aside>
+        <section class="container-content">
+            <div>
+                <h1>content</h1>
+            </div>
+        </section>
+    </div>
 </body>
+
 </html>
