--- a/view/home/index.html
+++ b/view/home/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="../../style/style.css">
+    <link rel="stylesheet" href="/src/style/style.css">
     <link rel="shortcut icon" href="/assets/materiais/logo petit.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
@@ -17,16 +17,16 @@
                 <img src="../../assets/materiais/petit perfil.png" alt="">
             </section>
             <ul>
-                <li> <i class="bi-house-fill"></i>Home</li>
+                <li><i class="bi-house-fill"></i>Home</li>
                 <li><i class="bi-folder-fill"></i>Pedidos</li>
                 <li><i class="bi-people-fill"></i>Clientes</li>
             </ul>
         </aside>
-        <section class="container-content">
+        <div class="container-content">
             <div>
                 <h1>content</h1>
             </div>
-        </section>
+        </div>
     </div>
 </body>
 
