--- a/view/login/index.html
+++ b/view/login/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="../../style/style.css">
+    <link rel="stylesheet" href="../../src/style/style.css">
     <link rel="shortcut icon" href="/assets/materiais/logo petit.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
@@ -28,7 +28,7 @@
             </form>
         </main>
     </section>
-    <script src="/script/script.js"></script>
+    <script src="/src/script/script.js"></script>
 </body>
 
 </html>
