--- a/src/style/style.css
+++ b/src/style/style.css
@@ -105,7 +105,7 @@
     position: fixed relative;
 }
 
-.menu{
+.menu {
     background-color: white;
     width: 15vw;
     height: 100vh;
@@ -116,43 +116,65 @@
     box-shadow: var(--sombra);
     z-index: 999;
 }
-.menu section{
+
+.menu section {
     width: 15vw;
     height: 15vw;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.menu img{
+
+.menu img {
     width: 10vw;
     height: 10vw;
     border-radius: 50%;
     box-shadow: var(--sombra);
 }
-.menu ul{
+
+.menu ul {
     height: auto;
     width: 15vw;
     box-sizing: border-box;
 }
-.menu li{
+
+.tab-btn {
     padding: 20px;
     list-style: none;
     transition: 0.3s all;
 }
-.menu li:hover{
+
+.tab-btn.active {
+    background-color: var(--laranja-escuro);
+}
+
+.tab-btn:hover {
     padding: 20px;
     list-style: none;
     background-color: var(--laranja);
     cursor: pointer;
+
 }
-.menu i{
+
+.menu i {
     margin-right: 10px;
 }
-.container-content{
+
+.container-content {
     max-width: 100vw;
     min-width: 85vw;
     box-sizing: border-box;
 }
+
+/* pagina  home vendedor*/
+.content {
+    display: none;
+}
+
+.content.show {
+    display: flex;
+}
+
 
 /* RESPONSE WIDTH 900px */
 @media (max-width:900px) {
