--- a/view/home/index.html
+++ b/view/home/index.html
@@ -33,13 +33,49 @@
             <!-- Pedidos -->
             <section class="content content-pedidos show" id="Pedidos">
                 <h1>PEDIDOS</h1>
-                <div class="container-filtro">
-                    <div><p>ID</p><input type="text" name="" id=""></div>
-                    <div><p>CLIENTE</p><input type="text" name="" id=""></div>
-                    <div><p>STATUS</p><input type="text" name="" id=""></div>
-                    <div><input type="submit" value="FILTRAR" name="" id=""></div>
-                </div>
+                <form class="container-filtro">
+                    <div>
+                        <p>ID</p>
+                        <input placeholder="ID" type="text" name="" id="">
+                    </div>
 
+                    <div>
+                        <p>CLIENTE</p>
+                        <input placeholder="Cliente" type="text" name="" id="">
+                    </div>
+
+                    <div>
+                        <p>STATUS</p>
+                        <select name="" id="">
+                            <option value="Aguardando Faturamento">Aguardando Faturamento</option>
+                            <option value="Faturado">Faturado</option>
+                            <option value="Concluido">Concluido</option>
+                            <option value="Cancelado">Cancelado</option>
+                        </select>
+                    </div>
+
+                    <div>
+                        <input type="submit" value="FILTRAR" name="" id="">
+                    </div>
+                </form>
+                <table>
+                    <tr>
+                        <td>
+                            <p>CONCLUIDO</p>
+                            <img src="../../assets/icon/iconCheck.png" alt="">
+                        </td>
+                        <td>
+                            <h1>Serra Azul 3 - #01</h1>
+                            <p>NF-E, Boleto 7/14/21 dias</p>
+                            <p>Logistica Própia</p>
+                        </td>
+                        <td>
+                            <h1>50UN - R$ 00,00</h1>
+                            <p>01/01/2024 00:00</p>
+                        </td>
+                    </tr>
+                </table>
+                <button class="adc-pedido">Novo Pedido</button>
             </section>
 
             <!-- Clientes -->
