--- a/view/login/index.html
+++ b/view/login/index.html
@@ -15,7 +15,7 @@
         <main>
             <img src="../../assets/materiais/logo petit.png" alt="LOGO PETIT">
             <h1>LOGIN</h1>
-            <form action="/view/pedido/index.html">
+            <form action="/view/home/index.html">
                 <div>
                     <input type="text" placeholder="Usuário" name="" id="Usuario">
                 </div>
