--- a/view/home/index.html
+++ b/view/home/index.html
@@ -77,7 +77,7 @@
                         </tr>
                     </table>
                 </div>
-                <button class="adc-pedido"> <a href="pedidos/novo pedido/index.html">Novo Pedido</a></button>
+                <a href="pedidos/novo pedido/index.html"><button class="adc-pedido"> Novo Pedido</button></a>
             </section>
 
             <!-- Clientes -->
