--- a/view/home/pedidos/novo pedido/index.html
+++ b/view/home/pedidos/novo pedido/index.html
@@ -21,7 +21,25 @@
             <label for="category_lote"><input type="checkbox" name="" id="category_lote">Lote</label>
         </aside>
         <section class="product-new-order">
-            produtos
+            <h1 class="title-new-order">NOVO PEDIDO</h1>
+            <table>
+                <tr>
+                    <td>
+                        <img src="../../../../assets/materiais/quibe.png" alt="">
+                    </td>
+                    <td>
+                        <h1>Quibe 9G - PCT 1,1KG</h1>
+                        <p>Quibe inspirado nas receitas do oriente médio + receita da vovo neuza, com pacote de
+                            1,1kg perfeito para atender os clientes</p>
+                    </td>
+                    <td>
+                        <h2>R$59,90</h2>
+                    </td>
+                    <td>
+                        <input placeholder="?" min='0' type="number" name="" id="">
+                    </td>
+                </tr>
+            </table>
             <span class="resume-order">
                 <p>5 UN</p>
                 <h2>R$ 50,00</h2>
