--- a/src/style/style.css
+++ b/src/style/style.css
@@ -362,17 +362,21 @@
     background-color: #ffffff;
     height: 100vh;
     width: 85vw;
-    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: top;
+    justify-content: center;
+    overflow: auto;
 }
 
 .resume-order {
-    position: absolute;
+    position: fixed;
     z-index: 99;
-    width: 80%;
+    width: 60%;
     background-color: var(--laranja);
     bottom: 0;
     left: 50%;
-    transform: translate(-50%,0);
+    transform: translate(-50%, 0);
     height: 10vh;
     border-radius: 8px 8px 0px 0px;
     padding: 20px;
@@ -382,19 +386,111 @@
     justify-content: space-between;
     align-items: center;
 }
-.resume-order button{
+
+.resume-order button {
     padding: 10px 25px;
-    background-color: #00B206;
     border: none;
     border-radius: 4px;
     box-shadow: var(--sombra);
     cursor: pointer;
     text-transform: uppercase;
+    background-color: #00B206;
+    color: white;
+    
 }
-.resume-order button,.resume-order p{
+
+.resume-order button,
+.resume-order p {
     font-size: 18px;
     font-weight: 500;
 
+}
+
+.title-new-order {
+    width: 100%;
+    top: 0;
+    background-color: white;
+    position: sticky;
+    height: 80px;
+    margin-bottom: 15px;
+    box-shadow: var(--sombra);
+    display: flex;
+    align-items: center;
+    padding: 15px;
+    box-sizing: border-box;
+}
+
+.product-new-order table {
+    width: 80%;
+    box-sizing: border-box;
+}
+
+.product-new-order td:nth-child(4),
+.product-new-order td:nth-child(3) {
+    width: 10%;
+    padding: 10px;
+    justify-content: center;
+}
+
+.product-new-order td:nth-child(1) {
+    width: 15%;
+    padding: 10px;
+    justify-content: left;
+}
+
+.product-new-order td:nth-child(2) {
+    width: 65%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.product-new-order td {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.product-new-order td p,
+.product-new-order td h1 {
+    width: 95%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.product-new-order tr {
+    border-radius: 8px;
+    margin: 10px 0px;
+    max-height: 20vh;
+    min-height: 15vh;
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid var(--cinza-claro);
+}
+
+.product-new-order img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 4px;
+}
+
+.product-new-order input[type="number"] {
+    width: 75px;
+    height: 40px;
+    text-align: center;
+    font-size: 30px;
+    border-radius: 4px;
+    border: var(--cinza-claro) 1px solid;
+    background-color: var(--cinza-m-claro);
+}
+
+
+.product-new-order input[type="number"]::-webkit-inner-spin-button {
+    padding: 5px;
+    cursor: pointer;
+    height: 40px;
 }
 
 /* RESPONSE WIDTH 900px */
