--- a/src/style/style.css
+++ b/src/style/style.css
@@ -10,7 +10,7 @@
     --laranja: #FF9011;
     --laranja-escuro: #E67F0D;
     --laranja-vermelho: #FE4E00;
-    --sombra: 0px 0px 5px -1px black;
+    --sombra: 0px 0px 5px -1px rgba(20, 20, 20, 0.781);
 }
 
 .section-login {
@@ -234,7 +234,6 @@
 }
 
 .container-list-pedidos {
-
     width: 100%;
     max-height: 75vh;
     box-sizing: border-box;
@@ -347,6 +346,8 @@
     flex-direction: column;
     padding: 20px;
     box-sizing: border-box;
+    box-shadow: var(--sombra);
+    z-index: 99;
 }
 
 .content-category-new-order input[type="checkbox"] {
@@ -408,11 +409,10 @@
 
 .title-new-order {
     width: 100%;
+    height: 10vh;
     top: 0;
     background-color: white;
     position: sticky;
-    height: 80px;
-    margin-bottom: 15px;
     box-shadow: var(--sombra);
     display: flex;
     align-items: center;
@@ -421,25 +421,28 @@
 }
 
 .product-new-order table {
-    width: 80%;
+    width: 85vw;
+    height: 90vh;
     box-sizing: border-box;
+    display: flex;
+    justify-content: center;
 }
 
 .product-new-order td:nth-child(4),
 .product-new-order td:nth-child(3) {
-    width: 10%;
+    width: 10vw;
     padding: 10px;
     justify-content: center;
 }
 
 .product-new-order td:nth-child(1) {
-    width: 15%;
+    max-width: 10vw;
     padding: 10px;
     justify-content: left;
 }
 
 .product-new-order td:nth-child(2) {
-    width: 65%;
+    width: 40vw;
     padding: 10px;
     box-sizing: border-box;
 }
@@ -461,6 +464,7 @@
 
 .product-new-order tr {
     border-radius: 8px;
+    max-width: 70vw;
     margin: 10px 0px;
     max-height: 20vh;
     min-height: 15vh;
