--- a/view/home/pedidos/novo pedido/index.html
+++ b/view/home/pedidos/novo pedido/index.html
@@ -43,11 +43,30 @@
             <span class="resume-order">
                 <p>5 UN</p>
                 <h2>R$ 50,00</h2>
-                <button>Finalizar</button>
+                <button id="VerificaPedido">Finalizar</button>
             </span>
+            
         </section>
+        <span id="resume_order">
+            <h1>Revise o Pedido</h1>
+            
+            <form action="">
+                <input placeholder="IDENTIFIQUE O CLIENTE" type="text">
+                <input placeholder="FATURAMENTO" type="text">
+                <input placeholder="LOGISTICA" type="text">
+                <input placeholder="PAGAMENTO" type="text">
+                <section>
+                    <img src="../../../../assets/materiais/queijo.png" alt="">
+                    <p>Produto A</p>
+                    <p>20UN</p>
+                    <p>R$365,00</p>
+
+                </section>
+
+        </span>
 
     </main>
+    <script src="../../../../src/script/script.js"></script>
 </body>
 
 </html>
