--- a/src/style/style.css
+++ b/src/style/style.css
@@ -385,21 +385,88 @@
     right: 0;
     border-radius: 50% 50% 10px 50%;
     margin: 10px;
+    box-shadow: var(--sombra);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 
-    & button,
-    p {
+    & p:nth-child(1) {
+        position: absolute;
+        color: white;
+        box-shadow: var(--sombra);
+        left: 0px;
+        top: 10px;
+        font-weight: 900;
+        background-color: #00e808;
+        width: 25px;
+        height: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
 
     }
 
-    & .title-new-order {
+    & p:nth-child(2) {
+        position: absolute;
+        color: white;
+        box-shadow: var(--sombra);
+        top: -10px;
+        font-weight: 600;
+        background-color: #ffcc02;
+        width: 65px;
+        height: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 6px;
+        font-size: 12px;
+
     }
 
-    & button {
+    & i {
+        font-size: 36px;
+        
     }
 
+    & span {
+        animation: propulsion infinite 3s;
+        background-color: #00b20651;
+        border-radius: 50%;
+        position: absolute;
+    }
 }
 
+@keyframes propulsion {
+    0% {
+        width: 0px;
+        aspect-ratio: 1/1;
+    }
 
+    50% {
+        width: 40px;
+        aspect-ratio: 1/1;
+        background-color: #00b20651;
+    }
+
+    90% {
+        width: 80px;
+        aspect-ratio: 1/1;        
+        background-color: #00b2060c;
+    }
+    91% {
+        width: 0px;
+        aspect-ratio: 1/1;
+        
+        background-color: #00b20600;
+    }
+
+    100% {
+        width: 0px;
+        aspect-ratio: 1/1;
+    }
+}
 
 
 .product-new-order table {
