--- a/view/home/pedidos/novo pedido/index.html
+++ b/view/home/pedidos/novo pedido/index.html
@@ -15,7 +15,7 @@
     <main class="new-order">
         <aside class="content-category-new-order">
             <a href="../../index.html"><img src="../../../../assets/materiais/logo petit.png" alt=""></a>
-            
+
             <h1>FILTROS</h1>
             <p>Por Categoria</p>
             <label for="category_caixa"><input type="checkbox" name="" id="category_caixa">Caixa</label>
@@ -42,8 +42,12 @@
                     </td>
                 </tr>
             </table>
-            <span class="resume-order">
-                <p>5 UN</p>
+            <span id="VerificaPedido" class="resume-order">
+                <p>
+                    5
+                    <span></span>
+                    
+                </p>
                 <p>R$ 50,00</p>
                 <i class="bi bi-cart-fill"> </i>
             </span>
@@ -73,7 +77,7 @@
                 <p>20UN</p>
                 <p>R$365,00</p>
             </section>
-           
+
 
             <span>
                 <p>50UN</p>
