--- a/view/home/pedidos/novo pedido/index.html
+++ b/view/home/pedidos/novo pedido/index.html
@@ -48,8 +48,8 @@
                     <span></span>
                     
                 </p>
-                <p>R$ 50,00</p>
-                <i class="bi bi-cart-fill"> </i>
+                <p>R$ 99,00</p>
+                <i class="bi bi-basket-fill"> </i>
             </span>
 
         </section>
