--- a/src/style/style.css
+++ b/src/style/style.css
@@ -378,12 +378,12 @@
 .resume-order {
     position: fixed;
     z-index: 99;
-    width: 8vw;
-    height: 8vw;
+    width: 6vw;
+    height: 6vw;
     background-color: var(--laranja);
     bottom: 0;
     right: 0;
-    border-radius: 50% 50% 10px 50%;
+    border-radius: 50%;
     margin: 10px;
     box-shadow: var(--sombra);
     display: flex;
@@ -391,19 +391,23 @@
     align-items: center;
     cursor: pointer;
 
+    & p{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: 900;
+        font-size: 10px;
+    }
+
     & p:nth-child(1) {
         position: absolute;
         color: white;
         box-shadow: var(--sombra);
-        left: 0px;
-        top: 10px;
-        font-weight: 900;
+        left: -10px;
+        top: 20px;
         background-color: #00e808;
         width: 25px;
         height: 25px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         border-radius: 50%;
 
     }
@@ -413,21 +417,16 @@
         color: white;
         box-shadow: var(--sombra);
         top: -10px;
-        font-weight: 600;
         background-color: #ffcc02;
-        width: 65px;
+        max-width: 70px;
+        padding: 3px;
+        box-sizing: border-box;
         height: 25px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         border-radius: 6px;
-        font-size: 12px;
-
     }
 
     & i {
         font-size: 36px;
-        
     }
 
     & span {
